--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
   <li class="nav-item">
     <a class="nav-link" routerLink = "publicaciones">PUBLICACIONES</a>
   </li>
-  <li class="nav-item">
+  <!--<li class="nav-item">
     <a class="nav-link" routerLink = "usuarios">USUARIOS</a>
-  </li>
+  </li>-->
   <li class="nav-item">
     <a class="nav-link" routerLink = "login">LOGIN</a>
   </li>
