--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,6 +13,9 @@
                 </div>                
                 <button class="btn btn-primary" (click) = "ingresar()" [disabled]= "!loginForm.valid" >Ingresar</button>
             </form>
+            <div class="alert alert-danger" role="alert"  *ngIf="estadologin" >
+                {{resultado}}
+              </div>
         </div>
   <div class="col-1 col-lg-4 "></div>
 </div>
